--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>HDX WILL CS Intake</title>
 
   <!-- PWA -->
-  <link rel="manifest.webmanifest" href="manifest.webmanifest" />
+  <link rel="manifest" href="manifest.webmanifest" />
   <meta name="theme-color" content="#0B3A6E" />
   <link rel="icon" href="icon-192.png" />
   <link rel="apple-touch-icon" href="icon-192.png" />
