--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 
   <!-- EmailJS (CDN) -->
   <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
+  <script defer src="./app.js"></script>
+
 
   <style>
     :root{
