--- a/index.html
+++ b/index.html
@@ -199,6 +199,24 @@
       h1{ font-size:24px; }
       main{ border-radius:16px; }
     }
+
+    /* Profile editor buttons */
+#saveProfileBtn{
+  background: #ffffff;        /* 흰 바탕 */
+  color: #0f5132;   /* 진한 초록 */
+  border: 0;
+  font-weight: 700;
+}
+
+#saveProfileBtn:hover{
+  filter: brightness(1.05);
+}
+
+#cancelProfileBtn{
+  color: #0b0b0b;        /* Cancel 글씨색(원하면 바꿔도 됨) */
+  font-weight: 700;
+}
+
   </style>
 </head>
 
